--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# benchmarks / data will be used for experiment results
+benchmarks/data/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
