--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # benchmarks / data will be used for experiment results
 benchmarks/data/*
+.vscode
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
