--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "torch >= 2.0.1",
+    "torch >= 2.1.1",
     "scipy >= 1.9.1",
     "tqdm",
     "tabulate"
@@ -36,6 +36,13 @@ dev = [
 
 qlora = ['bitsandbytes']
 flash = ['triton']
+
+llama = [
+    "sentencepiece==0.1.99",
+    "datasets==2.15.0",
+    "fire==0.5.0",
+    "float8_experimental",
+]
 
 [tool.usort]
 first_party_detection = false
