little cleaner, overfit works

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,10 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "black",
-    "usort",
-    "libcst",
+    "black==23.3.0",
+    "usort==1.0.6",
+    "ufmt==2.1.0",
+    "libcst==1.0.1",
     "bumpver",
     "pip-tools",
     "pytest"
