Add Llama Training scripts (#10)
* more to do

* why model no worky

* looking better

* little cleaner, overfit works

* cool

--- a/.github/workflows/ufmt.yml
+++ b/.github/workflows/ufmt.yml
@@ -20,7 +20,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install ufmt
+        pip install black==23.3.0 usort==1.0.6 ufmt==2.1.0 libcst==1.0.1
     - name: Analyzing the code with ufmt
       run: |
         ufmt check .
