--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "torch >= 2.0.1",
+    "torch >= 2.1.1",
     "scipy >= 1.9.1",
     "tqdm",
     "tabulate"
@@ -26,9 +26,10 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "black",
-    "usort",
-    "libcst",
+    "black==23.3.0",
+    "usort==1.0.6",
+    "ufmt==2.1.0",
+    "libcst==1.0.1",
     "bumpver",
     "pip-tools",
     "pytest"
@@ -36,6 +37,13 @@ dev = [
 
 qlora = ['bitsandbytes']
 flash = ['triton']
+
+llama = [
+    "sentencepiece==0.1.99",
+    "datasets==2.15.0",
+    "fire==0.5.0",
+    "float8_experimental",
+]
 
 [tool.usort]
 first_party_detection = false
