add flake8 pre-commit and update tests with mroe skips

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dev = [
     "bumpver",
     "pip-tools",
     "pytest",
-    "flake8-pyproject"
+    "flake8==6.1.0",
+    "flake8-pyproject",
 ]
 
 qlora = ['bitsandbytes']
