--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,8 +19,9 @@ repos:
           - ufmt == 2.1.0
           - libcst == 1.0.1
 
--   repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.3.0
     hooks:
-    -   id: flake8
-        additional_dependencies: [flake8-pyproject]
+        # Run the linter.
+        - id: ruff
