--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,15 +27,11 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "black==23.3.0",
-    "usort==1.0.6",
-    "ufmt==2.3.0",
-    "libcst==1.1.0",
     "pre-commit==3.6.0",
     "bumpver",
     "pip-tools",
     "pytest",
-    "ruff==0.3.0",
+    "ruff",
     "jsonargparse",
     "docstring-parser"
 ]
@@ -54,7 +50,8 @@ llama = [
 
 # ---------- RUFF ------------
 [tool.ruff]
-ignore = ['E231', 'E731']
+target-version = "py38"
+line-length = 99
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
@@ -85,29 +82,8 @@ exclude = [
     "venv",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint]
+ignore = ['E231', 'E731']
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F403"]
-
-# ---------- UFMT ------------
-
-[tool.usort]
-first_party_detection = false
-
-# ---------- Black ------------
-[tool.black]
-target-version = ["py38"]
-line-length = 99
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
