--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,11 @@ repos:
     - id: pyupgrade
       args: [--py310-plus]
 
-- repo: https://github.com/facebook/pyrefly
-  rev: 0.41.3
+- repo: local
   hooks:
     - id: pyrefly-typecheck
+      name: pyrefly check
+      entry: pyrefly check
+      language: system
+      types: [python]
+      pass_filenames: false
