--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install project dependencies
+      run: pip install ".[dev]"
     - name: Install pyrefly
       run: pip install pyrefly==0.44.1
     - name: Run pre-commit
