--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,3 +93,7 @@ ignore = ['E231', 'E731']
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F403"]
+
+# ---------- PYREFLY ------------
+[tool.pyrefly]
+project-excludes = ["**/cute/**"]
