--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pre-commit==3.6.0",
+    "prek>=0.2.27",
     "bumpver",
     "pip-tools",
     "pytest",
